--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,43 @@
-#
-# application.yml — главный конфигурационный файл Spring Boot.
+spring:
+  application:
+    name: bank-cards-management
 
-Что нужно сделать:
-  - Указать настройки подключения к базе данных.
-  - Указать порт приложения.
-  - Настроить параметры безопасности и JWT.
-  - Включить Swagger UI.
+  datasource:
+    url: jdbc:postgresql://localhost:5432/bankcards_db
+    username: postgres
+    password: rootroot
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        default_schema: public
+
+  liquibase:
+    change-log: classpath:db/migration/db.changelog-master.yaml
+    enabled: true
+    default-schema: public
+
+server:
+  port: 8080
+
+jwt:
+  secret: mySecretKeyForJWTTokenGenerationMustBeLongEnough12345
+  expiration: 86400000
+
+encryption:
+  secret-key: myEncryptionSecretKey32Bytes!
+  algorithm: AES
+
+logging:
+  level:
+    com.example.bankcards: DEBUG
+    org.springframework.boot: INFO
+    org.springframework.boot.autoconfigure: DEBUG
+    org.hibernate: INFO
+    org.liquibase: DEBUG
